// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`radio should render a checkbox 1`] = `
Array [
  .c1 {
  display: block;
  margin-bottom: 0.4em;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c0 {
  display: block;
  margin-bottom: 1em;
  position: relative;
}

.c2 {
  font-weight: bold;
}

.c3 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  font-weight: inherit;
  border-radius: 4px;
  resize: none;
  overflow: hidden;
}

.c3:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c3:focus,
.c3:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c3::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c3::-moz-placeholder {
  color: #a3a3a3;
}

.c3:-ms-input-placeholder {
  color: #a3a3a3;
}

.c3::placeholder {
  color: #a3a3a3;
}

.c3:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c3[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

<div
    class="c0"
  >
    <label
      class="c1"
      for="answer-label-ansID1"
    >
      Label (optional)
    </label>
    <div
      class="c2"
    >
      <textarea
        aria-invalid="false"
        class="c3"
        data-autofocus="true"
        data-test="txt-answer-label"
        id="answer-label-ansID1"
        name="label"
        placeholder=""
      />
    </div>
  </div>,
  .c2 {
  display: inline-block;
  margin-bottom: 0;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c6 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  display: inline-block;
  width: 1.1em;
  height: 1.1em;
  padding: 0;
  margin: 0 1em 0 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: 1em;
}

.c6:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c6:focus,
.c6:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c6::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c6::-moz-placeholder {
  color: #a3a3a3;
}

.c6:-ms-input-placeholder {
  color: #a3a3a3;
}

.c6::placeholder {
  color: #a3a3a3;
}

.c6:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c6[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

.c6:checked {
  background: url(SvgrURL) no-repeat center;
  background-size: 0.8em auto;
}

.c0 {
  display: block;
  margin-bottom: 1em;
  position: relative;
}

.c9 {
  height: 1em;
  width: 1.5em;
  top: 0.6000000000000001em;
  background: #FFFFFF;
  border-radius: 2em;
  position: absolute;
  border: 1px solid #666666;
  -webkit-transition: background 100ms ease-out,border-color 100ms ease-in;
  transition: background 100ms ease-out,border-color 100ms ease-in;
  outline: 1px solid transparent;
  cursor: pointer;
}

.c9:hover {
  border-color: #3B7A9E;
}

.c10 {
  display: inline-block;
  height: 1em;
  width: 1em;
  background: #FFFFFF;
  top: calc(42% - 1em / 2);
  left: calc(32% - 1em / 2);
  position: relative;
  will-change: transform;
  -webkit-transform: translateX( 0em );
  -ms-transform: translateX( 0em );
  transform: translateX( 0em );
  border-radius: 50%;
  -webkit-transition: -webkit-transform 100ms ease-in-out;
  -webkit-transition: transform 100ms ease-in-out;
  transition: transform 100ms ease-in-out;
  border: inherit;
}

.c7 {
  opacity: 0;
  position: relative;
  height: 100%;
  width: 100%;
  margin: 0;
  cursor: pointer;
}

.c7:focus + .c8 {
  box-shadow: 0 0 0 2px #FDBD56;
}

.c7:hover + .c8 {
  border-color: #3B7A9E;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.2em;
  width: 2em;
  position: relative;
}

.c4 {
  padding: 0 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #222222;
  font-weight: 600;
}

.c4:first-of-type {
  padding-right: 0.5em;
}

.c4:last-of-type {
  padding-left: 0.5em;
}

.c11 {
  padding: 0 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #999999;
  font-weight: 600;
}

.c11:first-of-type {
  padding-right: 0.5em;
}

.c11:last-of-type {
  padding-left: 0.5em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  margin-right: 0.2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="c0 c1"
  >
    <label
      class="c2 c3"
      for="ansID1"
    >
      Answer required
    </label>
    <div
      checked=""
      class="c4"
    >
      Off
    </div>
    <div
      aria-checked="false"
      class="c5"
      data-test="ansID1"
      role="switch"
    >
      <input
        aria-checked="false"
        aria-label="Answer required"
        class="c6 c7"
        data-test="ansID1-input"
        id="ansID1"
        name="ansID1"
        role="checkbox"
        type="checkbox"
      />
      <div
        class="c8 c9"
        role="presentation"
      >
        <div
          class="c10"
        />
      </div>
    </div>
    <div
      class="c11"
    >
      On
    </div>
  </div>,
  .c10 {
  display: block;
  margin-bottom: 0.4em;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c8 {
  display: block;
  margin-bottom: 1em;
  position: relative;
}

.c20 {
  position: absolute;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 0;
  line-height: 1.3;
  color: var(--color-text);
  width: 100%;
  min-width: 0;
}

.c19 svg {
  pointer-events: none;
  -webkit-flex: 0 0 2em;
  -ms-flex: 0 0 2em;
  flex: 0 0 2em;
}

.c19 svg path {
  fill: var(--color-text);
}

.c11 {
  font-weight: bold;
}

.c13 {
  font-weight: regular;
}

.c12 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  font-weight: inherit;
  border-radius: 4px;
  resize: none;
  overflow: hidden;
}

.c12:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c12:focus,
.c12:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c12::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c12::-moz-placeholder {
  color: #a3a3a3;
}

.c12:-ms-input-placeholder {
  color: #a3a3a3;
}

.c12::placeholder {
  color: #a3a3a3;
}

.c12:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c12[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

.c7 {
  background: #E4E8EB;
  background-size: cover;
  height: 1.4em;
  width: 1.4em;
  display: inline-block;
  margin: 2em 1em 0 0;
  border-radius: 4px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c5 {
  position: absolute;
  left: 10px;
  top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 2;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: 1.5em;
}

.c9 {
  margin-bottom: 1.5em;
}

.c4 {
  border: 1px solid #d6d8da;
  padding: 1em 1em 0;
  border-radius: 4px;
  position: relative;
  margin-bottom: 1em;
}

.c3 {
  position: relative;
}

.c3.option-enter {
  opacity: 0;
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
  z-index: 200;
}

.c3.option-enter-active {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: opacity 200ms ease-out,-webkit-transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
  -webkit-transition: opacity 200ms ease-out,transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
  transition: opacity 200ms ease-out,transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
}

.c3.option-exit {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c3.option-exit-active {
  opacity: 0;
  height: 0 !important;
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
  -webkit-transition: opacity 100ms ease-out,height 100ms ease-in 100ms,-webkit-transform 100ms ease-in;
  -webkit-transition: opacity 100ms ease-out,height 100ms ease-in 100ms,transform 100ms ease-in;
  transition: opacity 100ms ease-out,height 100ms ease-in 100ms,transform 100ms ease-in;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: var(--color-text);
  background-color: var(--color-bg);
  padding: 0.75em 2em;
  border-radius: 4px;
  font-size: 1em;
  font-weight: 600;
  cursor: pointer;
  line-height: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  overflow: hidden;
  border: 1px solid var(--color-bg);
  --color-text: #3B7A9E;
  --color-bg: #FFFFFF;
  border: 1px solid var(--color-text);
  border-radius: 4px 0 0 4px;
  border-right: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  z-index: 2;
}

.c16[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c16:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c16:hover {
  --color-text: #FFFFFF;
  --color-bg: #3B7A9E;
  border-color: var(--color-bg);
}

.c18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: var(--color-text);
  background-color: var(--color-bg);
  padding: 0.75em 2em;
  border-radius: 4px;
  font-size: 1em;
  font-weight: 600;
  cursor: pointer;
  line-height: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  overflow: hidden;
  border: 1px solid var(--color-bg);
  --color-text: #3B7A9E;
  --color-bg: #FFFFFF;
  border: 1px solid var(--color-text);
  border-radius: 0 4px 4px 0;
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  padding: 0.3em;
  position: relative;
}

.c18[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c18:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c18:hover {
  --color-text: #FFFFFF;
  --color-bg: #3B7A9E;
  border-color: var(--color-bg);
}

.c18:focus {
  z-index: 3;
}

.c17 {
  position: relative;
  display: inline-block;
}

.c21 {
  position: absolute;
  right: 0;
  top: 100%;
  z-index: 10;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

.c0 {
  margin: 1em 0 0;
  width: 85%;
}

.c1 {
  margin: 0 0 1em;
}

.c15 {
  margin-bottom: 1em;
}

<div
    class="c0"
  >
    <div
      class="c1"
      data-test="multiple-choice-options"
    >
      <div>
        <div
          class="c2 c3"
        >
          <div
            class="c4"
          >
            <div>
              <div
                class="c5"
              />
              <div
                class="c6"
              >
                <div
                  class="c7"
                  data-test="dummy-multiple-choice"
                  type="Checkbox"
                />
                <div
                  class="c8 c9"
                >
                  <label
                    class="c10"
                    for="option-label-1"
                  >
                    Label
                  </label>
                  <div
                    class="c11"
                  >
                    <textarea
                      aria-invalid="false"
                      class="c12"
                      data-autofocus="true"
                      data-test="option-label"
                      id="option-label-1"
                      invalid=""
                      name="label"
                      placeholder=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="c8 c9"
              >
                <label
                  class="c10"
                  for="option-description-1"
                >
                  Description (optional)
                </label>
                <div
                  class="c13"
                >
                  <textarea
                    aria-invalid="false"
                    class="c12"
                    data-test="option-description"
                    id="option-description-1"
                    name="description"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="c14 c15"
      >
        <button
          class="c16"
          data-test="btn-add-option"
          type="button"
        >
          Add checkbox
        </button>
        <div
          class="c17"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="c18"
            data-test="btn-add-option-menu"
            type="button"
          >
            <span
              class="c19"
            >
              <svg />
              <span
                class="c20"
              >
                Show additional options
              </span>
            </span>
          </button>
          <div
            class="c21"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`radio should render a mutually exclusive 1`] = `
.c10 {
  display: block;
  margin-bottom: 0.4em;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c8 {
  display: block;
  margin-bottom: 1em;
  position: relative;
}

.c11 {
  font-weight: bold;
}

.c13 {
  font-weight: regular;
}

.c12 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  font-weight: inherit;
  border-radius: 4px;
  resize: none;
  overflow: hidden;
}

.c12:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c12:focus,
.c12:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c12::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c12::-moz-placeholder {
  color: #a3a3a3;
}

.c12:-ms-input-placeholder {
  color: #a3a3a3;
}

.c12::placeholder {
  color: #a3a3a3;
}

.c12:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c12[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

.c7 {
  background: #E4E8EB;
  background-size: cover;
  height: 1.4em;
  width: 1.4em;
  display: inline-block;
  margin: 2em 1em 0 0;
  border-radius: 4px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c14 {
  margin: 0;
}

.c15 {
  margin: 0;
}

.c16 {
  vertical-align: middle;
  text-align: left;
  margin: 0;
  padding: 0.25em 0 0.5em;
  font-size: inherit;
}

.c16 .c21 {
  margin-left: 1em;
}

.c18 {
  display: none;
  margin-top: -1em;
  border-left: 3px solid #d6d8da;
  padding: 1em;
}

.c18 p {
  margin-top: 0;
}

.c17 {
  border: none;
  font-size: 1em;
  font-weight: bold;
  margin: 0;
  padding: 0.25em 0.25em 0.25em 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background: transparent;
  cursor: pointer;
  color: #3B7A9E;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 0;
}

.c17:focus {
  outline: 2px solid #FDBD56;
}

.c17::before {
  content: "";
  background-color: #3B7A9E;
  -webkit-mask: url(SvgrURL);
  mask: url(SvgrURL);
  width: 1.5em;
  height: 1.5em;
  margin-top: 0.2em;
  margin-left: -0.5em;
}

.c17:hover {
  color: #003c57;
}

.c17:hover::before {
  background-color: #003c57;
}

.c19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: var(--color-text);
  background-color: var(--color-bg);
  padding: 0.75em 2em;
  border-radius: 4px;
  font-size: 1em;
  font-weight: 600;
  cursor: pointer;
  line-height: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  overflow: hidden;
  border: 1px solid var(--color-bg);
  --color-text: #FFFFFF;
  --color-bg: #3B7A9E;
  position: relative;
  border: none;
  padding: 0.4em 0.8em;
  color: black;
  background-color: #d6d8da;
  font-weight: normal;
}

.c19[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c19:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c19:hover {
  --color-text: #FFFFFF;
  --color-bg: #2d5d79;
  border-color: var(--color-bg);
}

.c19:hover {
  background-color: #999999;
}

.c19:focus {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c5 {
  position: absolute;
  left: 10px;
  top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 2;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: 1.5em;
}

.c9 {
  margin-bottom: 1.5em;
}

.c4 {
  border: 1px solid #d6d8da;
  padding: 1em 1em 0;
  border-radius: 4px;
  position: relative;
  margin-bottom: 1em;
}

.c3 {
  position: relative;
}

.c3.option-enter {
  opacity: 0;
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
  z-index: 200;
}

.c3.option-enter-active {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: opacity 200ms ease-out,-webkit-transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
  -webkit-transition: opacity 200ms ease-out,transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
  transition: opacity 200ms ease-out,transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
}

.c3.option-exit {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c3.option-exit-active {
  opacity: 0;
  height: 0 !important;
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
  -webkit-transition: opacity 100ms ease-out,height 100ms ease-in 100ms,-webkit-transform 100ms ease-in;
  -webkit-transition: opacity 100ms ease-out,height 100ms ease-in 100ms,transform 100ms ease-in;
  transition: opacity 100ms ease-out,height 100ms ease-in 100ms,transform 100ms ease-in;
}

.c2 {
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

.c0 {
  margin: 1em 0 0;
  width: 85%;
}

.c1 {
  margin: 0 0 1em;
}

.c20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: var(--color-text);
  background-color: var(--color-bg);
  padding: 0.75em 2em;
  border-radius: 4px;
  font-size: 1em;
  font-weight: 600;
  cursor: pointer;
  line-height: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  overflow: hidden;
  border: 1px solid var(--color-bg);
  --color-text: #3B7A9E;
  --color-bg: #FFFFFF;
  border: 1px solid var(--color-text);
  width: 100%;
  margin-top: 1em;
  margin-bottom: 1em;
}

.c20[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c20:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c20:hover {
  --color-text: #FFFFFF;
  --color-bg: #3B7A9E;
  border-color: var(--color-bg);
}

<div
  class="c0"
>
  <div
    class="c1"
    data-test="multiple-choice-options"
  >
    <div>
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div>
            <div
              class="c5"
            />
            <div
              class="c6"
            >
              <div
                class="c7"
                data-test="dummy-multiple-choice"
                type="MutuallyExclusive"
              />
              <div
                class="c8 c9"
              >
                <label
                  class="c10"
                  for="option-label-1"
                >
                  Label
                </label>
                <div
                  class="c11"
                >
                  <textarea
                    aria-invalid="false"
                    class="c12"
                    data-autofocus="true"
                    data-test="option-label"
                    id="option-label-1"
                    invalid=""
                    name="label"
                    placeholder=""
                  />
                </div>
              </div>
            </div>
            <div
              class="c8 c9"
            >
              <label
                class="c10"
                for="option-description-1"
              >
                Description (optional)
              </label>
              <div
                class="c13"
              >
                <textarea
                  aria-invalid="false"
                  class="c12"
                  data-test="option-description"
                  id="option-description-1"
                  name="description"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c14"
    data-test="collapsible"
  >
    <div
      class="c15 collapsible-header"
      data-test="collapsible-header"
    >
      <h2
        class="c16 collapsible-title"
        data-test="collapsible-title"
      >
        <button
          aria-controls="collapsible-body"
          class="c17 collapsible-toggle-Collapsible-Button"
          data-test="collapsible-toggle-button"
        >
          What is an OR answer?
        </button>
      </h2>
    </div>
    <div
      aria-hidden="true"
      class="c18 collapsible-body"
      data-test="collapsible-body"
    >
      <p
        class=""
      >
        The OR answer type is a mutually exclusive answer. When selected, any preceding answers given on the page will be cleared. It will appear as a checkbox answer to the respondent unless there is more than one OR option, in which case it will display as a Radio answer.
      </p>
      <button
        class="c19"
        data-test="collapsible-hide-button"
        type="button"
      >
        Hide this
      </button>
    </div>
  </div>
  <div>
    <button
      class="c20"
      type="button"
    >
      Add another option
    </button>
  </div>
</div>
`;

exports[`radio should render a radio 1`] = `
Array [
  .c1 {
  display: block;
  margin-bottom: 0.4em;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c0 {
  display: block;
  margin-bottom: 1em;
  position: relative;
}

.c2 {
  font-weight: bold;
}

.c3 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  font-weight: inherit;
  border-radius: 4px;
  resize: none;
  overflow: hidden;
}

.c3:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c3:focus,
.c3:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c3::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c3::-moz-placeholder {
  color: #a3a3a3;
}

.c3:-ms-input-placeholder {
  color: #a3a3a3;
}

.c3::placeholder {
  color: #a3a3a3;
}

.c3:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c3[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

<div
    class="c0"
  >
    <label
      class="c1"
      for="answer-label-ansID1"
    >
      Label (optional)
    </label>
    <div
      class="c2"
    >
      <textarea
        aria-invalid="false"
        class="c3"
        data-autofocus="true"
        data-test="txt-answer-label"
        id="answer-label-ansID1"
        name="label"
        placeholder=""
      />
    </div>
  </div>,
  .c2 {
  display: inline-block;
  margin-bottom: 0;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c6 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  display: inline-block;
  width: 1.1em;
  height: 1.1em;
  padding: 0;
  margin: 0 1em 0 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: 1em;
}

.c6:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c6:focus,
.c6:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c6::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c6::-moz-placeholder {
  color: #a3a3a3;
}

.c6:-ms-input-placeholder {
  color: #a3a3a3;
}

.c6::placeholder {
  color: #a3a3a3;
}

.c6:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c6[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

.c6:checked {
  background: url(SvgrURL) no-repeat center;
  background-size: 0.8em auto;
}

.c0 {
  display: block;
  margin-bottom: 1em;
  position: relative;
}

.c9 {
  height: 1em;
  width: 1.5em;
  top: 0.6000000000000001em;
  background: #FFFFFF;
  border-radius: 2em;
  position: absolute;
  border: 1px solid #666666;
  -webkit-transition: background 100ms ease-out,border-color 100ms ease-in;
  transition: background 100ms ease-out,border-color 100ms ease-in;
  outline: 1px solid transparent;
  cursor: pointer;
}

.c9:hover {
  border-color: #3B7A9E;
}

.c10 {
  display: inline-block;
  height: 1em;
  width: 1em;
  background: #FFFFFF;
  top: calc(42% - 1em / 2);
  left: calc(32% - 1em / 2);
  position: relative;
  will-change: transform;
  -webkit-transform: translateX( 0em );
  -ms-transform: translateX( 0em );
  transform: translateX( 0em );
  border-radius: 50%;
  -webkit-transition: -webkit-transform 100ms ease-in-out;
  -webkit-transition: transform 100ms ease-in-out;
  transition: transform 100ms ease-in-out;
  border: inherit;
}

.c7 {
  opacity: 0;
  position: relative;
  height: 100%;
  width: 100%;
  margin: 0;
  cursor: pointer;
}

.c7:focus + .c8 {
  box-shadow: 0 0 0 2px #FDBD56;
}

.c7:hover + .c8 {
  border-color: #3B7A9E;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.2em;
  width: 2em;
  position: relative;
}

.c4 {
  padding: 0 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #222222;
  font-weight: 600;
}

.c4:first-of-type {
  padding-right: 0.5em;
}

.c4:last-of-type {
  padding-left: 0.5em;
}

.c11 {
  padding: 0 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #999999;
  font-weight: 600;
}

.c11:first-of-type {
  padding-right: 0.5em;
}

.c11:last-of-type {
  padding-left: 0.5em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  margin-right: 0.2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="c0 c1"
  >
    <label
      class="c2 c3"
      for="ansID1"
    >
      Answer required
    </label>
    <div
      checked=""
      class="c4"
    >
      Off
    </div>
    <div
      aria-checked="false"
      class="c5"
      data-test="ansID1"
      role="switch"
    >
      <input
        aria-checked="false"
        aria-label="Answer required"
        class="c6 c7"
        data-test="ansID1-input"
        id="ansID1"
        name="ansID1"
        role="checkbox"
        type="checkbox"
      />
      <div
        class="c8 c9"
        role="presentation"
      >
        <div
          class="c10"
        />
      </div>
    </div>
    <div
      class="c11"
    >
      On
    </div>
  </div>,
  .c10 {
  display: block;
  margin-bottom: 0.4em;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c17 {
  display: inline-block;
  margin-bottom: 0;
  font-weight: bold;
  vertical-align: middle;
  color: #222222;
  line-height: 1.3;
}

.c21 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  display: inline-block;
  width: 1.1em;
  height: 1.1em;
  padding: 0;
  margin: 0 1em 0 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: 1em;
}

.c21:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c21:focus,
.c21:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c21::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c21::-moz-placeholder {
  color: #a3a3a3;
}

.c21:-ms-input-placeholder {
  color: #a3a3a3;
}

.c21::placeholder {
  color: #a3a3a3;
}

.c21:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c21[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

.c21:checked {
  background: url(SvgrURL) no-repeat center;
  background-size: 0.8em auto;
}

.c8 {
  display: block;
  margin-bottom: 1em;
  position: relative;
}

.c14 {
  display: block;
  margin-bottom: 1em;
  position: relative;
  opacity: 0.6;
}

.c39 {
  position: absolute;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
}

.c38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 0;
  line-height: 1.3;
  color: var(--color-text);
  width: 100%;
  min-width: 0;
}

.c38 svg {
  pointer-events: none;
  -webkit-flex: 0 0 2em;
  -ms-flex: 0 0 2em;
  flex: 0 0 2em;
}

.c38 svg path {
  fill: var(--color-text);
}

.c11 {
  font-weight: bold;
}

.c13 {
  font-weight: regular;
}

.c12 {
  font-size: 1em;
  border: thin solid #999999;
  padding: 0.5em;
  color: #222222;
  display: block;
  width: 100%;
  -webkit-transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  transition: outline-color 100ms ease-in,border-color 100ms ease-in;
  outline: thin solid transparent;
  font-weight: inherit;
  border-radius: 4px;
  resize: none;
  overflow: hidden;
}

.c12:hover {
  border-color: #3B7A9E;
  box-shadow: 0 0 0 1pt #3B7A9E;
}

.c12:focus,
.c12:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c12::-webkit-input-placeholder {
  color: #a3a3a3;
}

.c12::-moz-placeholder {
  color: #a3a3a3;
}

.c12:-ms-input-placeholder {
  color: #a3a3a3;
}

.c12::placeholder {
  color: #a3a3a3;
}

.c12:focus {
  outline: none;
  border-style: solid;
  border-color: #3B7A9E;
}

.c12[disabled] {
  opacity: 0.8;
  pointer-events: none;
}

.c7 {
  background: #E4E8EB;
  background-size: cover;
  height: 1.4em;
  width: 1.4em;
  display: inline-block;
  margin: 2em 1em 0 0;
  border-radius: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c24 {
  height: 1em;
  width: 1.5em;
  top: 0.6000000000000001em;
  background: #FFFFFF;
  border-radius: 2em;
  position: absolute;
  border: 1px solid #666666;
  -webkit-transition: background 100ms ease-out,border-color 100ms ease-in;
  transition: background 100ms ease-out,border-color 100ms ease-in;
  outline: 1px solid transparent;
  cursor: pointer;
}

.c24:hover {
  border-color: #3B7A9E;
}

.c25 {
  display: inline-block;
  height: 1em;
  width: 1em;
  background: #FFFFFF;
  top: calc(42% - 1em / 2);
  left: calc(32% - 1em / 2);
  position: relative;
  will-change: transform;
  -webkit-transform: translateX( 0em );
  -ms-transform: translateX( 0em );
  transform: translateX( 0em );
  border-radius: 50%;
  -webkit-transition: -webkit-transform 100ms ease-in-out;
  -webkit-transition: transform 100ms ease-in-out;
  transition: transform 100ms ease-in-out;
  border: inherit;
}

.c22 {
  opacity: 0;
  position: relative;
  height: 100%;
  width: 100%;
  margin: 0;
  cursor: pointer;
}

.c22:focus + .c23 {
  box-shadow: 0 0 0 2px #FDBD56;
}

.c22:hover + .c23 {
  border-color: #3B7A9E;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2.2em;
  width: 2em;
  position: relative;
}

.c19 {
  padding: 0 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #222222;
  font-weight: 600;
}

.c19:first-of-type {
  padding-right: 0.5em;
}

.c19:last-of-type {
  padding-left: 0.5em;
}

.c26 {
  padding: 0 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #999999;
  font-weight: 600;
}

.c26:first-of-type {
  padding-right: 0.5em;
}

.c26:last-of-type {
  padding-left: 0.5em;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  margin-right: 0.2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c27 {
  margin: 0;
}

.c28 {
  margin: 0;
}

.c29 {
  vertical-align: middle;
  text-align: left;
  margin: 0;
  padding: 0.25em 0 0.5em;
  font-size: inherit;
}

.c29 .c41 {
  margin-left: 1em;
}

.c31 {
  display: none;
  margin-top: -1em;
  border-left: 3px solid #d6d8da;
  padding: 1em;
}

.c31 p {
  margin-top: 0;
}

.c30 {
  border: none;
  font-size: 1em;
  font-weight: bold;
  margin: 0;
  padding: 0.25em 0.25em 0.25em 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background: transparent;
  cursor: pointer;
  color: #3B7A9E;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 0;
}

.c30:focus {
  outline: 2px solid #FDBD56;
}

.c30::before {
  content: "";
  background-color: #3B7A9E;
  -webkit-mask: url(SvgrURL);
  mask: url(SvgrURL);
  width: 1.5em;
  height: 1.5em;
  margin-top: 0.2em;
  margin-left: -0.5em;
}

.c30:hover {
  color: #003c57;
}

.c30:hover::before {
  background-color: #003c57;
}

.c32 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: var(--color-text);
  background-color: var(--color-bg);
  padding: 0.75em 2em;
  border-radius: 4px;
  font-size: 1em;
  font-weight: 600;
  cursor: pointer;
  line-height: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  overflow: hidden;
  border: 1px solid var(--color-bg);
  --color-text: #FFFFFF;
  --color-bg: #3B7A9E;
  position: relative;
  border: none;
  padding: 0.4em 0.8em;
  color: black;
  background-color: #d6d8da;
  font-weight: normal;
}

.c32[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c32:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c32:hover {
  --color-text: #FFFFFF;
  --color-bg: #2d5d79;
  border-color: var(--color-bg);
}

.c32:hover {
  background-color: #999999;
}

.c32:focus {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c5 {
  position: absolute;
  left: 10px;
  top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 2;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: 1.5em;
}

.c9 {
  margin-bottom: 1.5em;
}

.c4 {
  border: 1px solid #d6d8da;
  padding: 1em 1em 0;
  border-radius: 4px;
  position: relative;
  margin-bottom: 1em;
}

.c16 {
  margin-bottom: 0.6em;
  pointer-events: none;
}

.c3 {
  position: relative;
}

.c3.option-enter {
  opacity: 0;
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
  z-index: 200;
}

.c3.option-enter-active {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: opacity 200ms ease-out,-webkit-transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
  -webkit-transition: opacity 200ms ease-out,transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
  transition: opacity 200ms ease-out,transform 200ms cubic-bezier(0.175,0.885,0.32,1.275);
}

.c3.option-exit {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c3.option-exit-active {
  opacity: 0;
  height: 0 !important;
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
  -webkit-transition: opacity 100ms ease-out,height 100ms ease-in 100ms,-webkit-transform 100ms ease-in;
  -webkit-transition: opacity 100ms ease-out,height 100ms ease-in 100ms,transform 100ms ease-in;
  transition: opacity 100ms ease-out,height 100ms ease-in 100ms,transform 100ms ease-in;
}

.c35 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: var(--color-text);
  background-color: var(--color-bg);
  padding: 0.75em 2em;
  border-radius: 4px;
  font-size: 1em;
  font-weight: 600;
  cursor: pointer;
  line-height: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  overflow: hidden;
  border: 1px solid var(--color-bg);
  --color-text: #3B7A9E;
  --color-bg: #FFFFFF;
  border: 1px solid var(--color-text);
  border-radius: 4px 0 0 4px;
  border-right: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  z-index: 2;
}

.c35[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c35:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c35:hover {
  --color-text: #FFFFFF;
  --color-bg: #3B7A9E;
  border-color: var(--color-bg);
}

.c37 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: var(--color-text);
  background-color: var(--color-bg);
  padding: 0.75em 2em;
  border-radius: 4px;
  font-size: 1em;
  font-weight: 600;
  cursor: pointer;
  line-height: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  overflow: hidden;
  border: 1px solid var(--color-bg);
  --color-text: #3B7A9E;
  --color-bg: #FFFFFF;
  border: 1px solid var(--color-text);
  border-radius: 0 4px 4px 0;
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  padding: 0.3em;
  position: relative;
}

.c37[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.c37:focus-within {
  border-color: transparent;
  outline: 3px solid #FDBD56;
  box-shadow: 0 0 0 3px #FDBD56;
}

.c37:hover {
  --color-text: #FFFFFF;
  --color-bg: #3B7A9E;
  border-color: var(--color-bg);
}

.c37:focus {
  z-index: 3;
}

.c36 {
  position: relative;
  display: inline-block;
}

.c40 {
  position: absolute;
  right: 0;
  top: 100%;
  z-index: 10;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

.c0 {
  margin: 1em 0 0;
  width: 85%;
}

.c1 {
  margin: 0 0 1em;
}

.c34 {
  margin-bottom: 1em;
}

<div
    class="c0"
  >
    <div
      class="c1"
      data-test="multiple-choice-options"
    >
      <div>
        <div
          class="c2 c3"
        >
          <div
            class="c4"
          >
            <div>
              <div
                class="c5"
              />
              <div
                class="c6"
              >
                <div
                  class="c7"
                  data-test="dummy-multiple-choice"
                  type="Radio"
                />
                <div
                  class="c8 c9"
                >
                  <label
                    class="c10"
                    for="option-label-1"
                  >
                    Label
                  </label>
                  <div
                    class="c11"
                  >
                    <textarea
                      aria-invalid="false"
                      class="c12"
                      data-autofocus="true"
                      data-test="option-label"
                      id="option-label-1"
                      invalid=""
                      name="label"
                      placeholder=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="c8 c9"
              >
                <label
                  class="c10"
                  for="option-description-1"
                >
                  Description (optional)
                </label>
                <div
                  class="c13"
                >
                  <textarea
                    aria-invalid="false"
                    class="c12"
                    data-test="option-description"
                    id="option-description-1"
                    name="description"
                  />
                </div>
              </div>
              <div
                class="c6"
              >
                <div
                  class="c14 c15 c16"
                  disabled=""
                  name="Dynamic Option"
                >
                  <label
                    class="c17 c18"
                    for="dynamic-option-toggle-switch-1"
                  >
                    Dynamic Option
                  </label>
                  <div
                    checked=""
                    class="c19"
                  >
                    Off
                  </div>
                  <div
                    aria-checked="false"
                    class="c20"
                    data-test="dynamic-option-toggle-switch-1"
                    role="switch"
                  >
                    <input
                      aria-checked="false"
                      aria-label="Dynamic Option"
                      class="c21 c22"
                      data-test="dynamic-option-toggle-switch-1-input"
                      id="dynamic-option-toggle-switch-1"
                      name="dynamic-option-toggle-switch-1"
                      role="checkbox"
                      type="checkbox"
                    />
                    <div
                      class="c23 c24"
                      role="presentation"
                    >
                      <div
                        class="c25"
                      />
                    </div>
                  </div>
                  <div
                    class="c26"
                  >
                    On
                  </div>
                </div>
              </div>
              <div
                class="c8 c9"
              >
                <div
                  class="c27"
                  data-test="collapsible"
                >
                  <div
                    class="c28 collapsible-header"
                    data-test="collapsible-header"
                  >
                    <h2
                      class="c29 collapsible-title"
                      data-test="collapsible-title"
                    >
                      <button
                        aria-controls="collapsible-body"
                        class="c30 collapsible-toggle-Collapsible-Button"
                        data-test="collapsible-toggle-button"
                      >
                        What is a dynamic option?
                      </button>
                    </h2>
                  </div>
                  <div
                    aria-hidden="true"
                    class="c31 collapsible-body"
                    data-test="collapsible-body"
                  >
                    <p
                      class=""
                    >
                      Radio answer options can be set to be dynamic to use answers from a previous checkbox question. Note, if only one checkbox answer exists then the radio answer question is skipped.
                    </p>
                    <p
                      class=""
                    >
                      Question titles can include piped dynamic option answers.
                    </p>
                    <button
                      class="c32"
                      data-test="collapsible-hide-button"
                      type="button"
                    >
                      Hide this
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="c33 c34"
      >
        <button
          class="c35"
          data-test="btn-add-option"
          type="button"
        >
          Add another option
        </button>
        <div
          class="c36"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="c37"
            data-test="btn-add-option-menu"
            type="button"
          >
            <span
              class="c38"
            >
              <svg />
              <span
                class="c39"
              >
                Show additional options
              </span>
            </span>
          </button>
          <div
            class="c40"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;
